[package]
name = "raptor-core"
version = "0.1.0"
edition = "2021"
description = "Raptor player core types: state machine, command, property, event, error"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
