[package]
name = "raptor-ffi"
version = "0.1.0"
edition = "2021"
description = "Raptor C ABI exports: Player + extern C functions"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
raptor-core = { path = "../raptor-core" }
raptor-ffmpeg = { path = "../raptor-ffmpeg" }
raptor-render = { path = "../raptor-render" }
raptor-audio = { path = "../raptor-audio" }
raptor-pipeline = { path = "../raptor-pipeline" }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[example]]
name = "cli_player"
path = "examples/cli_player.rs"
