[package]
name = "raptor-pipeline"
version = "0.1.0"
edition = "2021"
description = "Raptor pipeline: demux/decode/render/audio threads + AV sync"

[dependencies]
raptor-core = { path = "../raptor-core" }
raptor-ffmpeg = { path = "../raptor-ffmpeg" }
raptor-render = { path = "../raptor-render" }
raptor-audio = { path = "../raptor-audio" }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
